[project]
name = "gym-collabsort"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Baptiste Pesquet", email = "bpesquet@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
