[project]
name = "gym-collabsort"
version = "0.1.0"
description = "A Gymnasium environment for training agents on a collaborative sorting task"
readme = "README.md"
authors = [
    { name = "Baptiste Pesquet", email = "bpesquet@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
